--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,12 @@ datasets
 trl
 bitsandbytes
 feedparser
+transformers
+protobuf
+python-dotenv
+peft
+jinja2>=3.1.0
+accelerate>=0.26.0
 
 # PyTorch with CUDA 12.0 (adjust version if needed)
 torch==2.3.0+cu120
