--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ peft
 jinja2>=3.1.0
 accelerate>=0.26.0
 
-# PyTorch with CUDA 12.0 (adjust version if needed)
-torch==2.3.0+cu120
-torchvision==0.18.0+cu120
-torchaudio==2.3.0+cu120
+# PyTorch with CUDA 12.0+
+torch
+torchvision
+torchaudio
 
